# typycal-periods

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
examples/: example_long.py  example_short.py
examples/res/: example_measurement_short.npy
src/typycal_periods/: __init__.py
src/typycal_periods/clustering/: __init__.py  cluster.py  selection.py
src/typycal_periods/metrics/: base_metric.py  exceptions.py  indicators.py  measures.py
src/typycal_periods/tp_types/: __init__.py  data_classes.py  time_series.py
src/typycal_periods/utils/: __init__.py  normalization.py
src/typycal_periods/visualization/: __init__.py  visualization.py
tests/: conftest.py  test_clustering.py  test_dataclasses.py  test_indicators.py  test_measures.py  test_normalization.py  test_timeseriesobservations.py  test_typical_periods_selection.py  test_visualization.py
tests/res/: test_measurement.npy
