[metadata]
name = typycal-periods
description = A tool to derive typical periods from large time series to speed up the optimization or simulation of energy systems
version = 1.0.0
author = Daniel Piendl
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.packages.find]
where=src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
typycal_periods = py.typed

[flake8]
max-line-length = 160
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,venv
